# Personal-Learnings-Python

PythonTricks/: _test_operator.py  file2.csv  fileinput_tricks.py  intertools_tee.py  lambda_tricks.py  operators.pickle  python_descriptors.py  python_operators.py  simple_tricks.py
expert-django/: pyproject.toml
expert-django/src/: db.sqlite3
expert-django/src/src/: middleware.py  settings.py
flask-api/: pyproject.toml
graphql-api/: app.py  init_db.py  pyproject.toml
graphql-api/api/: models.py
learning-amqp/: README.md
metarpogramming/: pyproject.toml
metarpogramming/src/: main.py
mypy-learnings/: envfile.py  example.prof  pyproject.toml  users.pkl  wolt_dopc.py
mypy-learnings/src/colors/: base.py  blue.py  core.py  types.py
mypy-learnings/src/notebooks/: data_schema.ipynb  design_patterns.ipynb  event_sourcing.ipynb  practice.ipynb  python-subprocess-learnings.ipynb  ship_events.json
mypy-learnings/src/topics/: keyboard_press.py  locks.py  multiprocessing2.py  pickly.py  profiling.py  signal_client.py  signalling.py  simple_parser.py  spinner_async.py  spinner_proc.py  spinner_thread.py  type-checking.py
mypy-learnings/stubs/: blue.pyi
py03_101/ex_0/: try.py
pytest-tips-and-tricks/code/basic/: test_approx.py
python-pubsub/samples/snippets/: requirements.txt
python-sse/backend/: tox.ini
python-sse/backend/src/: s.js
python-ui/: main.py  pyproject.toml  python-ui.code-workspace
python-ui/tests/: test_add.py  test_main.py
python_data_model/: descriptors.py  functions.py  keep_objects_alive_with_try_execpt.py  meta.py  reflections.py
python_grpc/: code_owner.py  greet_client.py  greet_pb2_grpc.py  greet_server.py
