[tool.poetry]
name = "graphql-api"
version = "0.1.0"
description = ""
authors = ["Emmanuel Pastor <emmanuel.pastor@momox.biz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
flask-cors = "^3.0.10"
ariadne = "^0.16.0"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
