[tool.poetry]
name = "python-ui"
version = "0.1.0"
description = ""
authors = ["Emmanuel Pastor <emmanuel.pastor@momox.biz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^2.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
